[gd_scene load_steps=2 format=3 uid="uid://chud00001"]

[ext_resource type="Script" path="res://scenes/ui/hud/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 200.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HpBar" type="ProgressBar" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(180, 28)
max_value = 5.0
value = 5.0
show_percentage = false

[node name="HpLabel" type="Label" parent="MarginContainer/HpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 5/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CartCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "Carts: 0"
horizontal_alignment = 2
